# 2s1d

./: .dev.vars.example  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  eslint.config.js  flake.nix  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  test-perms.ts  tsconfig.json  vitest.client.config.ts
.codex/: config.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
backend/: Dockerfile  README.md  pyproject.toml  test.db
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: audit_logs.py  categories.py  item_status.py  qr_codes.py
backend/app/core/: config.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 199c025a96c9_merge_categories_and_item_status.py  a1b2c3d4e5f6_add_categories_table.py  a568afb1e530_create_actual_audit_logs_table.py  d0951deb73f1_update_schema.py  e14605ffb8eb_init.py  fc199d7fd0aa_add_item_status_table.py
backend/app/models/: __init__.py  audit_log.py  category.py  item_status.py
backend/app/schemas/: audit_log.py  category.py  item_status.py  qr_code.py
backend/app/services/: audit_log.py  category.py  item_status.py
backend/tests/: conftest.py  test_audit_logs.py  test_categories.py  test_item_status.py  test_main.py  test_qr_codes.py
dist-server/: .env.example  server.js  server.js.map
docs/: DEPLOYMENT.md  INSTRUKCJA_UZYTKOWNIKA.md  tech-stack.md
e2e/: item-user-qr-actions.spec.ts  (+2 more)
(+172 files in other folders)
