[project]
name = "inventory-backend"
version = "0.1.0"
description = "System zarządzania - backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg2-binary",
    "pydantic-settings>=2.14.1",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
]
