[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[project]
name = "inventory-backend"
version = "0.1.0"
description = "System zarządzania - backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg2-binary",
    "pydantic-settings>=2.14.1",
    "sqlalchemy",
    "alembic",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx",
]
