[project]
name = "inventory-backend"
version = "0.1.0"
description = "System zarządzania - backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic",
  "fastapi",
  "psycopg2-binary",
  "pydantic-settings>=2.14.1",
  "sqlalchemy",
  "uvicorn[standard]",
]

[dependency-groups]
dev = [
  "httpx",
  "pytest",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
